exports[`test renders using flattened properties correctly 1`] = `
<view
  height={390}
  mockedComponent="svg-component"
  width={390}>
  <view
    mockedComponent="svg-G"
    x={20}
    y={20}>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 10 10 0 0 0 NaN NaN Z "
        fill="#3199de"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#3199de" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Washington
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 10 10 0 0 0 NaN NaN Z "
        fill="#2980b9"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#2980b9" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Oregon
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 10 10 0 0 0 NaN NaN Z "
        fill="#df9a14"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#df9a14" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Minnesota
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 10 10 0 0 0 NaN NaN Z "
        fill="#2473a5"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#2473a5" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Alaska
        </view>
      </view>
    </view>
  </view>
</view>
`;

exports[`test renders using options property correctly 1`] = `
<view
  height={390}
  mockedComponent="svg-component"
  width={390}>
  <view
    mockedComponent="svg-G"
    x={20}
    y={20}>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 50 50 0 0 0 NaN NaN Z "
        fill="#3199de"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#3199de" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Washington
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 50 50 0 0 0 NaN NaN Z "
        fill="#2980b9"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#2980b9" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Oregon
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 50 50 0 0 0 NaN NaN Z "
        fill="#df9a14"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#df9a14" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Minnesota
        </view>
      </view>
    </view>
    <view
      mockedComponent="svg-G">
      <view
        d="M NaN NaN A 150 150 0 0 1 NaN NaN L NaN NaN A 50 50 0 0 0 NaN NaN Z "
        fill="#2473a5"
        fillOpacity={1}
        mockedComponent="svg-Path"
        stroke="#2473a5" />
      <view
        mockedComponent="svg-G"
        x={20}
        y={20}>
        <view
          fill="#ECF0F1"
          fontFamily="Arial"
          fontSize={8}
          fontStyle="normal"
          fontWeight="bold"
          mockedComponent="svg-Text"
          textAnchor="middle"
          x={NaN}
          y={NaN}>
          Alaska
        </view>
      </view>
    </view>
  </view>
</view>
`;

exports[`test renders with 1 data item correctly 1`] = `
<view
  height={390}
  mockedComponent="svg-component"
  width={390}>
  <view
    mockedComponent="svg-G"
    x={20}
    y={20}>
    <view
      mockedComponent="svg-G">
      <view
        cx={155}
        cy={155}
        fill="#3199de"
        mockedComponent="svg-Circle"
        r={150}
        stroke="#277ab1" />
      <view
        cx={155}
        cy={155}
        fill="#fff"
        mockedComponent="svg-Circle"
        r={50}
        stroke="#277ab1" />
      <view
        fill="#ECF0F1"
        fontFamily="Arial"
        fontSize={8}
        fontStyle="normal"
        fontWeight="bold"
        mockedComponent="svg-Text"
        textAnchor="middle"
        x={155}
        y={55}>
        Washington
      </view>
    </view>
  </view>
</view>
`;
